$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-02-22 [C] Increased height for logo section of coppermine theme {GauGau}
2010-02-19 [A] Added plugin hooks for thumbnail table manipulation {GauGau}
2010-02-18 [B] Added missing token checks to forms {GauGau}
2010-02-18 [A] Added icon display to preserve the same look all over the app {GauGau}
2010-02-14 [A] Use intermediate picture size as default video size (thread ID 63728) {eenemeenemuu}
2010-02-11 [A] Added plugin hook 'search_form' (thread ID 63693) {eenemeenemuu}
2010-02-11 [A] Added new parameter to functions 'starttable' and 'endtable': return or echo content {eenemeenemuu}
2010-02-10 [B] Fixed slideshow from lastcom of an album to start at correct file (threadID 63585) {Nibbler}
2010-02-10 [B] Fixed search results leading to wrong files (threadID 63583) {Nibbler}
2010-02-09 [C] Replaced ascending and descending GIFs by PNGs {Timo}
2010-02-09 [C] Replaced all rating GIFs by PNGs {Timo}
2010-02-05 [A] Added Chinese language file (user contribution) {eenemeenemuu}
2010-02-04 [C] Added draft for new default theme (work in progress) {GauGau}
2010-02-04 [C] Added icons for new default theme {GauGau}
2010-02-04 [B] Fixed sidebar issue (thread ID 63620) {eenemeenemuu}
2010-02-04 [M] Removed export feature that didn't work as expected {GauGau}
2010-02-04 [B] Updated Russian language file (user contribution) {GauGau}
2010-02-03 [C] Fixed punctuation dupes in ban manager (thread ID 63594) {eenemeenemuu}
2010-02-03 [C] Removed text on some buttons on album manager for space reasons (thread ID 63596) {GauGau}